# censorator

./: .gitignore  ffmpegextractor.sh  fimv.py  frameextractor.py  main.py  readme.md  requirements.txt  setup.cfg  util.py
src/: censorator.py
