[metadata]
name = censorator
version = 0.1
author = Jonas Kalinka
author_email = jonas.kalinka@web.de
description = Censors (female) nudity in images and gif with different options. Based on the nudenet detector.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/joka42/recent-files-cleaner
project_urls =
    Bug Tracker = https://github.com/joka42/censorator/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent

[options]
install_requires =
    wheel
    nudenet
    opencv-python
    numpy
    pillow
    webp
python_requires = >=3.6
package_dir = 
    =src
py_modules = 
    censorator

